--- a/assets/index.html
+++ b/assets/index.html
@@ -1,57 +1,294 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOOSTRAP</title>
-    
+
     <!-- Ajoutons le lien de boostrap coté css -->
     <link rel="stylesheet" href="../css-js-folder/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css-js-folder/css/main.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/1427d579a.js" crossorigin="anonymous"></script>
+    <!-- font awesome -->
 </head>
+
 <body>
     <!-- j'apprend boostrap en compartimentant mon code avec différents sections -->
-       <header>
+    <header class="py-4">
         <!-- ici j'ai un header avec une nav -->
-        <nav class="bg-light">
+        <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
             <!-- ici c'est une div avec une autre ou j'applique les utilitaire comme les bg-color de boostrap -->
             <div class="container">
-                <div class="bg-secondary py-4"></div>
+                <!-- ici on a la navbar brand de boostrap qui sera à gauche -->
+                <a class="navbar-brand text-uppercase fw-bold" href="#">
+                    <span class="bg-primary bg-gradient p-1 rounded-3 text-light">John</span>Doe
+                </a>
+                <!-- Le boutton navbar toggler qui permet de déclancher la navigation avec le data-bs-target qui est identique à l'id de la div qui enveloppe notre navigation -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- les classes utilitaire que nous avons mis c'est pour styliser les éléments de la barre de navigation
+                ICI C'EST LA DIV QUI ENVELOPPE NOTRE NAVIGATION-->
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#johndoe">Qui suis-je ?</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#expertise">Expertises</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#portfolio">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
             </div>
         </nav>
-       </header>
-       <main>
-        <section class="my-5">
+    </header>
+    <main>
+        <section id="johndoe" class="m-5">
             <!-- dans le main je cré une div dans lequel j'apprend les grilles de lignes et colones  -->
             <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h1>Je suis SESSO Ayida Développeur web</h1>
-                        <h2>Bienvenue dans mon univers créatif</h2>
-                        <button>Mon expertise web</button>
+                <div class="row gy-4 align-items-center">
+                    <div class="col-12 col-md-6">
+                        <h1 class="fw-bold">Je suis SESSO Ayida Développeur et Designer web</h1>
+                        <h2 class="fw-light">Bienvenue dans mon univers créatif</h2>
+                        <a href="#expertise" class="btn btn-primary mt-5">Mon expertise web</a>
                     </div>
-                    <div class="col">
+                    <div class=" col-12 col-md-6">
                         <!-- ici j'ai appris l'utilité de alt qui est égal à alternative -->
-                        <img src="../images/portrait.jpg" alt="Photo de SMILE" class="W-100">
+                        <img src="../images/portrait.jpg" alt="Photo de Jon Doe" class="w-100">
                     </div>
                 </div>
             </div>
         </section>
-        <section>
+        <section class="py-5 bg-light">
+            <div class="container">
+                <h2 class="mb-0">Mon expertise web</h2>
+                <h3 class=" fw-light fs-5">Développement web et design</h3>
+
+                <!-- Developpement -->
+                <div class="row gy-4 mt-4">
+                    <div class="col-12 col-md-7">
+
+                        <!-- progresssbar -->
+
+                        <div class="bg-white p-3">
+                            <div class="row">
+                                <!-- dans cette ligne nos cols vont varié en fn des col que j'ai mis pour les écran
+                                et la col de la seconde div s'adaptera à la place qu'il lui restera -->
+                                <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                                    <!-- ici on met display flex justify content center pour centrer les élément -->
+                                    <div class="d-flex justify-content-center">
+                                        <i class="fab fa-html5 fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">HTML5</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
+                                            aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="mb-3 p-3 bg-white">
+                            <div class="row align-items-center">
+                                <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                                    <div class="d-flex align-items-center">
+                                        <i class="fab fa-css3-alt fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">CSS3</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-100" role="progressbar" aria-valuenow="100"
+                                            aria-valuemin="0" aria-valuemax="100">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 p-3 bg-white">
+                            <div class="row align-items-center">
+                                <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                                    <div class="d-flex align-items-center">
+                                        <i class="fab fa-js fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">JS</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
+                                            aria-valuemin="0" aria-valuemax="100">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 p-3 bg-white">
+                            <div class="row align-items-center">
+                                <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                                    <div class="d-flex align-items-center">
+                                        <i class="fab fa-php fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">PHP</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
+                                            aria-valuemin="0" aria-valuemax="100">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="mb-3 p-3 bg-white">
+                            <div class="row align-items-center">
+                                <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                                    <div class="d-flex align-items-center">
+                                        <i class="fab fa-sass fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">SASS</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-50" role="progressbar" aria-valuenow="50"
+                                            aria-valuemin="0" aria-valuemax="100">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 offset-md-1 col-md-4">
+                        <img src="../images/code.jpg" alt="écran montrant du code php" width="100%">
+                    </div>
+                </div>
+                <!-- Design -->
+                <div class="row gy-4 mt-5">
+                    <div class="col-12 col-md-4">
+                        <img src="../images/design.jpg" alt="écran montrant des designs" width="100%">
+                    </div>
+                    <div class="col-12 offset-md-1 col-md-7">
+                        <div class="bg-secondary h-100 w-100 py-5"></div>
+                    </div>
+                </div>
+            </div>
+
 
         </section>
-        <section>
-
+        <section class="py-5">
+            <div class="container">
+                <h2>Mon portfolio</h2>
+                <h3>Projets perso et pro</h3>
+                <div class=" rowg">
+                    <div class=" col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://picsum.photos/300/150?random=1" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Projet 1</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">En savoir plus</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://picsum.photos/300/150?random=2" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Projet 2</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">En savoir plus</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://picsum.photos/300/150?random=3" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Projet 3</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">En savoir plus</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://picsum.photos/300/150?random=4" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Projet 4</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">En savoir plus</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <section>
 
+        <section class="py-5 bg-light">
+            <div class="container">
+                <h2>Un projet de création web ?</h2>
+                <h3>Allons en discuter autour d'un café</h3>
+
+                <div class="row gy-4 mt-5">
+                    <div class="col-12 col-md-5">
+                        <img src="../images/grab-a-coffee.jpg" alt="Image d'une tasse de café" width="100%">
+                    </div>
+                    <div class="col-12 offset-md-1 col-md-6">
+                        <div class="bg-secondary h-100 w-100 py-5">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-       </main>
-       <footer>
+    </main>
+    <footer class="border-top">
+        <div class="container py-5">
+            <div class="row gy-4">
+                <div class="col-12 col-md-4">
+                    <div class="bg-secondary py-5"></div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="bg-secondary py-5"></div>
+                </div>
+                <div class="col-12 col-md-4 text-md-end">
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><i class="bi bi-linkedin"></i></li>
+                        <li class="list-inline-item"><i class="bi bi-instagram"></i></li>
+                        <li class="list-inline-item"><i class="bi bi-twitter"></i></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
-       </footer>
-     <!-- Ajoutons le lien de boostrap coté js ici -->
+    </footer>
+    <!-- Ajoutons le lien de boostrap coté js ici -->
     <script src="../css-js-folder/js/bootstrap.min.js"></script>
 </body>
+
 </html>
